docs: document the JDK internal-package boundary for agents
Agents repeatedly second-guess com.sun-prefixed APIs, but since the
module system the support boundary is whether a JDK module exports the
package, not its name prefix. The agent instructions now state that
exported packages such as the com.sun.source Compiler Tree API are
supported, that non-exported internals (com.sun.tools.javac, sun.*,
jdk.internal.*) and --add-exports/--add-opens workarounds are off
limits in project code, and that Error Prone's own compiler flags are
not a precedent.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>